<resources>
    <string name="app_name">RecyclerReminder</string>

    <!-- Days of the week -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- Garbage to recycle -->
    <string-array name="waste">
        <item>Organic</item>
        <item>Plastics</item>
        <item>Paper</item>
        <item>Mixed</item>
        <item>Glass/Metals</item>
    </string-array>

    <!-- Menu items -->
    <string name="menu_alarm">Change Reminder Time</string>

    <string name="time_picker_dialog">Set Reminder Time</string>
    <string name="channel_name">alarm_channel</string>
    <string name="channel_description">RecyclerReminder notification channel</string>

</resources>